# medgemma-cxr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-16-longitudinal-comparison-design.md  2026-02-16-longitudinal-comparison-impl.md  2026-02-16-streamlit-cxr-localization-design.md  2026-02-16-streamlit-cxr-localization-impl.md
tests/: conftest.py  test_bbox.py  test_comparison.py  test_image_utils.py  test_inference.py
