[project]
name = "medgemma-cxr"
version = "0.1.0"
description = "Streamlit app using MedGemma 1.5 4B (via mlx-vlm on Apple Silicon) for chest X-ray analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx-vlm",
    "numpy",
    "pillow",
    "python-dotenv",
    "streamlit",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]
